# satnogs-dashboard

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  run.sh
.github/: dependabot.yml
.github/workflows/: mirror.yml
app/: config.py  db.py  jobs.py  main.py  models.py  routes_actions.py  routes_analysis.py  routes_queue.py  rules.py
app/adapters/: identity.py  satnogs_network.py  signal.py
app/data/: decoder_registry.toml
app/static/: style.css
app/templates/: analysis.html  base.html  index_placeholder.html  queue.html
app/templates/partials/: panel_identity.html  panel_meta.html  panel_next_action.html  panel_related.html  panel_review.html  panel_signal.html
scripts/: dev_seed_signal_db.py  run_identity_json.py  setup.ps1  setup.sh
