[project]
name = "satnogs-dashboard"
version = "0.1.0"
description = "Observation Review Workbench composing satnogs-signal, satnogs-id, satnogs-decoder"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: live engine-container smoke tests (deselected by default)"]
addopts = "-m 'not slow'"
